--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -1,9 +1,7 @@
 .feature{
     padding-top: 60px;
     padding-bottom: 60px;
-    @include mobile {padding-top:60px;padding-bottom: 60px;}
-    @include tablet {padding-top: 60px;padding-bottom: 60px;}
-    @include desktop {padding-top: 94px;}}
+    @include desktop {padding-top: 94px; padding-bottom: 94px;}}
 .feature__list{
     justify-content: center;
     @include mobile {
@@ -16,7 +14,9 @@
 .feature__item{
     align-items: center;
     justify-content: center;
-    @include mobile {width: 100%;}
+    margin-bottom: 20px;
+    &:last-child{margin-bottom: 0;};
+    @include mobile {width: 100%; margin-bottom: 0;}
     @include tablet {flex-basis: calc((100% - 30px) / 2);}
     @media screen and (max-width:1199px){&:nth-child(2n){margin-right: 0;}}
     @include desktop{flex-basis: calc((100% - 90px) / 4);
@@ -33,11 +33,11 @@
 .feature__title{
     margin-bottom: 10px;
     color: $titleColor;
+    text-align: center;
     @include font(700,14,1.4);
     text-transform: uppercase;
     @include mobile {
-        margin-top: 30px;
-        text-align: center;}
+        margin-top: 30px;}
     @include tablet {
         margin-bottom: 10px;
         margin-top: 0;
