--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -12,11 +12,23 @@
     padding-bottom: 60px;
     background-color:$footerColor;}
 .page-footer__content{
-    text-align: center;
-    justify-content: center;
-    @include mobile {min-width: 480px;}
-    @include tablet {display: flex; flex-wrap: wrap;}
-    @include desktop {display: flex; align-items: baseline;}
+    @media screen and (max-width:479px){
+        text-align: center;
+        justify-content: center;}
+    @include mobile {
+        min-width: 480px;
+        text-align: center;
+        justify-content: center;}
+    @include tablet {
+        display: flex; 
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: space-evenly;}
+    @include desktop {
+        display: flex; 
+        align-items: baseline;
+        text-align: start;
+        justify-content: space-between;}
 }
 .page-footer__logo{
     display: block;
@@ -27,6 +39,7 @@
 .page-footer__item{
     margin-bottom: 12px;
     @include desktop {margin-bottom: 9px;}
+    &:last-child {margin-bottom: 0;}
 }
 .page-footer__adress{color:$backgroundColor;}
 .page-footer__contact{
@@ -34,14 +47,19 @@
     transition: color 250ms $animation;
     &:hover, &:focus{color:$accentColor;}}
 .footer-subscribe{
-    margin-top: 60px;
-    @include tablet {margin-left: 190px; margin-top: 0;};
-    @include desktop {margin-left: 70px;};
+    @media screen and (max-width:767px){margin-top: 60px;}
+    @include tablet {
+        // margin-left: 190px; 
+        margin-top: 0;};
+    @include desktop {
+        // margin-left: 70px;
+        text-align: start};
 }
 .footer-subscribe__list{
     @include display;
     margin-top: 20px;}
-.footer-subscribe__item{margin-right: 10px;}
+.footer-subscribe__item{margin-right: 10px;
+&:last-child {margin-right: 0}}
 .footer-subscribe__link{ 
     @include display;
     background: rgba(255,255,255,0.1);
@@ -52,14 +70,19 @@
     transition: background-color 250ms $animation;
     &:hover, &:focus{background-color: $accentColor;}}
 .footer-sing{
-    margin-top: 60px;
-    @include desktop {margin-left: 93px;text-align: start;}
+    @media screen and (max-width:1199px){margin-top: 60px;}
+    @include desktop {
+        // margin-left: 93px;
+        text-align: start;}
 }
 .footer-sing__form{
-    justify-items: center;
     @media screen and (min-width:320px){margin-top: 20px;}
-    @include mobile {flex-wrap: wrap; width: 450px; margin-top: 20px;}
-    @include desktop {display: flex; flex-wrap: nowrap;}
+    @include mobile {
+        flex-wrap: wrap; 
+        margin-top: 20px;}
+    @include desktop {
+        display: flex; 
+        flex-wrap: nowrap;}
     }
 .footer-sing__input{
     width: 100%;
@@ -69,7 +92,6 @@
     border-radius: 4px;
     background-color: $footerColor;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    @include mobile {width: 450px;};
     @include desktop {width: 358px; margin-right: 12px;}
 }
 .footer-sing__btn{
