--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -22,11 +22,7 @@
     @include tablet {display:none;}
 }
 .mobmenu__open{
-    position: absolute;
-    // display:inline-flex;
-    // margin-right: auto;
-    top: 20px;
-    right: 20px;
+    display:flex;
     background-color: transparent;
     border:none;
     fill: $titleColor;
