--- a/sass/partials/_title-text.scss
+++ b/sass/partials/_title-text.scss
@@ -1,7 +1,11 @@
 .title{
     margin-top: 0;
-    margin-bottom: 50px;
+    @media screen and (max-width:1199px){
+        margin-bottom: 30px;
+        @include font(700,28,1.2)};
+    @include desktop {
+        margin-bottom: 50px;
+        @include font(700,36,1.2)};
     color: $titleColor;
-    @include font(700,36,1.2);
     text-align: center;}
 .feature__text, .team__speciality {color:$textColor;}
