--- a/css/main.css
+++ b/css/main.css
@@ -1098,7 +1098,15 @@ ul, h1, h2, h3, p {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 40px;
+  row-gap: 15px;
+  -webkit-column-gap: 8px;
+     -moz-column-gap: 8px;
+          column-gap: 8px;
+}
+@media screen and (min-width: 480px) {
+  .filter-list {
+    margin-bottom: 40px;
+  }
 }
 @media screen and (min-width: 768px) {
   .filter-list {
@@ -1120,18 +1128,10 @@ ul, h1, h2, h3, p {
   }
 }
 
-.filter-list__item {
-  margin-right: 8px;
-}
-.filter-list__item:last-child {
-  margin-right: 0;
-}
-
 .filter-list__button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 15px;
   text-align: center;
   background-color: #F5F4FA;
   color: #212121;
@@ -1150,7 +1150,7 @@ ul, h1, h2, h3, p {
 }
 
 .filter-list__text {
-  padding: 6px 24px;
+  padding: 6px 25px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
@@ -1176,9 +1176,6 @@ ul, h1, h2, h3, p {
 }
 
 .projects__item {
-  margin-bottom: 30px;
-  padding-left: 15px;
-  padding-right: 15px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1186,16 +1183,16 @@ ul, h1, h2, h3, p {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 479px) {
+  .projects__item {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width: 768px) {
   .projects__item {
     -ms-flex-preferred-size: calc((100% - 30px) / 2);
         flex-basis: calc((100% - 30px) / 2);
-    margin-top: 30px;
   }
 }
 @media screen and (max-width: 1199px) {
@@ -1210,7 +1207,6 @@ ul, h1, h2, h3, p {
   .projects__item {
     -ms-flex-preferred-size: calc((100% - 60px) / 3);
         flex-basis: calc((100% - 60px) / 3);
-    padding: 0;
   }
   .projects__item:nth-child(3n) {
     margin-right: 0;
@@ -1219,7 +1215,14 @@ ul, h1, h2, h3, p {
     margin-bottom: 0;
   }
 }
-.projects__item:hover {
+
+.projects__item {
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.projects__item:hover, .projects__item :focus {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -1233,7 +1236,6 @@ ul, h1, h2, h3, p {
       -ms-flex-direction: column;
           flex-direction: column;
   height: 100%;
-  text-decoration: none;
 }
 
 .projects__name {
@@ -1276,10 +1278,10 @@ ul, h1, h2, h3, p {
   height: 100%;
   -webkit-transform: translateY(101%);
           transform: translateY(101%);
-  -webkit-transition: -webkit-transform 250ms var(--animation);
-  transition: -webkit-transform 250ms var(--animation);
-  transition: transform 250ms var(--animation);
-  transition: transform 250ms var(--animation), -webkit-transform 250ms var(--animation);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects__item:hover .projects__overlay {
   -webkit-transform: translateY(0);
