--- a/sass/components/portfolio/_filter.scss
+++ b/sass/components/portfolio/_filter.scss
@@ -3,15 +3,14 @@
     @include desktop{padding-top: 94px;}}
 .filter-list{
     display:flex;
-    flex-wrap: wrap; 
-    margin-bottom: 40px;
+    flex-wrap: wrap;
+    row-gap: 15px;
+    column-gap: 8px;
+    @include mobile {margin-bottom: 40px;}
     @include tablet {@include display; margin-bottom: 30px;}
     @include desktop {margin-bottom: 50px;}}
-.filter-list__item{margin-right: 8px;
-    &:last-child{margin-right: 0;}}
 .filter-list__button{
     display: flex;
-    margin-bottom: 15px;
     text-align: center;
     background-color: #F5F4FA; 
     color:$titleColor;
@@ -22,5 +21,5 @@
         color:$backgroundColor;
         box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);}}
 .filter-list__text{
-    padding: 6px 24px;
+    padding: 6px 25px;
     @include font(500,16,1.6);}
