--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -2,26 +2,24 @@
     @include mobile {display:flex;flex-wrap:wrap;gap:30px;}
     @include tablet {display:flex;}}
 .projects__item{
-    margin-bottom: 30px;
-    padding-left: 15px;
-    padding-right: 15px;
     align-items: center;
     justify-content: center;
     width: 100%;
-    @include tablet {flex-basis: calc((100% - 30px)/2);margin-top: 30px;}
+    @media screen and (max-width:479px){margin-bottom: 30px;}
+    @include tablet {flex-basis: calc((100% - 30px)/2);}
     @media screen and (max-width:1199px){
         &:nth-child(2n){margin-right: 0;}
         &:nth-last-child(-n + 3){margin-bottom: 0;}}
-    @include desktop {flex-basis: calc((100% - 60px) / 3); padding:0;
+    @include desktop {flex-basis: calc((100% - 60px)/3);
         &:nth-child(3n){margin-right: 0;}
         &:nth-last-child(-n + 3){margin-bottom: 0;}}
-    transition: box-shadow 250ms $animation;
-    &:hover{box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);}
-}
-.projects__link{display: flex;
+    }
+.projects__item {transition: box-shadow 250ms $animation;
+    &:hover, :focus {box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);}}
+.projects__link{
+    display: flex;
     flex-direction: column;
-    height: 100%;
-    text-decoration: none;}
+    height: 100%;}
 .projects__name{
     color:$titleColor;
     @include font(700,18,2,0.06);}
@@ -45,8 +43,9 @@
     width:100%; 
     height: 100%;
     transform:translateY(101%);
-    transition: transform 250ms var(--animation);
-    .projects__item:hover & {transform:translateY(0);}}
+    transition: transform 250ms $animation;
+    .projects__item:hover & {transform: translateY(0);}
+}
 .projects__description{
     position: absolute;
     padding: 63px 24px;
