--- a/css/main.css
+++ b/css/main.css
@@ -1283,7 +1283,7 @@ ul, h1, h2, h3, p {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.projects__item:hover .projects__overlay {
+.projects__overlay .projects__item:hover, :focus .projects__overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
