--- a/css/main.css
+++ b/css/main.css
@@ -330,12 +330,24 @@ ul, h1, h2, h3, p {
       -ms-flex-align: center;
           align-items: center;
   color: #757575;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.1;
-  letter-spacing: 0.03em;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) {
+  .site-contact__link {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.2 0 0.02;
+    letter-spacing: 0.03em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .site-contact__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.1;
+    letter-spacing: 0.02em;
+  }
 }
 .site-contact__link:hover, .site-contact__link:focus {
   color: #2196F3;
