--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,8 +1,9 @@
 .team{
     padding-top: 60px;
+    padding-bottom: 60px;
     margin-top: 0;
     background-color:$secondoryColor;
-    @media screen and (min-width:1200px){padding-top: 94px;}
+    @media screen and (min-width:1200px){padding-top: 94px;padding-bottom: 94px;}
     }
 .team__name{
     margin-bottom: 10px;
