--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -28,18 +28,14 @@
     border-radius: 4px;
     margin-bottom: 30px;
     background-color: $secondoryColor;
-    @include mobile {max-width: 100%;width: 100%;}
-    @include tablet {margin-bottom: 30px;}}
+    @include mobile {max-width: 100%; width: 100%;}}
 .feature__title{
     margin-bottom: 10px;
     color: $titleColor;
     text-align: center;
     @include font(700,14,1.4);
     text-transform: uppercase;
-    @include mobile {
-        margin-top: 30px;}
     @include tablet {
         margin-bottom: 10px;
-        margin-top: 0;
         text-align: left;}}
 .feature__text{@include font(400,14,1.7);}
