--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -88,6 +88,7 @@
     width: 100%;
     height: 50px;
     padding: 15px 16px;
+    color: $blank;
     border:1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: $footerColor;
