--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -78,7 +78,7 @@
     padding: 12px 16px;
     resize:none;
     @include font(400,12,1.2,0.01);
-    color: rgba(117, 117, 117, 0.5);}
+    color: #000000;}
 .modal__wrapped{position: relative;}
 .modal__icon{
     position:absolute;
@@ -90,13 +90,14 @@
     .modal__input:focus + & {fill: $accentColor;}}
 .agreement{
     @include display;
-    @include font (400,11,1.2,0.02);
+    flex-wrap: wrap;
+    @include font (400,10,1.2,0.02);
     @include mobile {@include font(400,12,1.2)};
     @include desktop {@include font(400,14,1.7)};
     color:var$textColor;
     cursor: pointer;}
 .agreement__link{
-    @include font (400,11,1.2,0.02);
+    @include font (400,10,1.2,0.02);
     @include mobile {@include font(400,12,1.2,0.03)};
     @include desktop {@include font(400,14,1.7)};
     padding-left: 5px;
@@ -120,4 +121,3 @@
         background-color: $buttonHover;
         border:none;
         fill:$backgroundColor;}}
-
