--- a/sass/components/portfolio/_filter.scss
+++ b/sass/components/portfolio/_filter.scss
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     row-gap: 15px;
     column-gap: 8px;
-    @include mobile {margin-bottom: 40px;}
+    margin-bottom: 40px;
     @include tablet {@include display; margin-bottom: 30px;}
     @include desktop {margin-bottom: 50px;}}
 .filter-list__button{
